assets/css/custom.css
.logo-view img {
    width: 70px;
}

.logo-view p {
    font-size: 15px;
    font-weight: 600;
}

.logo-view {
    display: none;
}

#menu {
    height: 100vh;
}

#icons {
    position: absolute;
    bottom: 10px;
    text-align: center !important;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;

}
#menu-list {
    position: absolute;
    top: 30vh;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;

}

.home {
    width: 82vw !important;
}

#news .container {
    padding-bottom: 0;
}

#mis-a-vis p.body-text,
#mis-a-vis h4 {
    color: #000000 !important;
}

.mis-a-vis {
    padding-left: 0 !important;
}

.link-effect a {
    color: #fff;
    padding: 8px 0;
    position: relative;
    -moz-transition: ease-out 0.3s 0.1s;
    -o-transition: ease-out 0.3s 0.1s;
    -webkit-transition: ease-out 0.3s;
    -webkit-transition-delay: 0.1s;
    transition: ease-out 0.3s 0.1s;
}

.link-effect a::after {
    height: 2px;
    width: 100%;
    background: white;
    content: "";
    position: absolute;
    left: 0px;
    bottom: 0;
    -moz-transform: scaleX(0);
    -ms-transform: scaleX(0);
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -moz-transition: 0.3s;
    -o-transition: 0.3s;
    -webkit-transition: 0.3s;
    transition: 0.3s;
}

.link-effect a:hover::after {
    -moz-transform: scaleX(1);
    -ms-transform: scaleX(1);
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
}

.btn-sm, .btn-group-sm > .btn {
    padding: 0.25rem 0.5rem;
    font-size: 0.7rem;
    line-height: 1.5;
    border-radius: 0.2rem;
}
#courses img {
    width: 50px;
}

body {
/*
  background: #f2f2f2;
  font-family: 'proxima-nova-soft', sans-serif;
  font-size: 14px;
*/
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.post-module {
  position: relative;
  z-index: 1;
  display: block;
  background: #FFFFFF;
  min-width: 270px;
  height: 450px;
  -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
  -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
  -webkit-transition: all 0.3s linear 0s;
  -moz-transition: all 0.3s linear 0s;
  -ms-transition: all 0.3s linear 0s;
  -o-transition: all 0.3s linear 0s;
  transition: all 0.3s linear 0s;
}
.post-module:hover,
.hover {
  -webkit-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
  box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
}
.post-module:hover .thumbnail img,
.hover .thumbnail img {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  transform: scale(1.1);
  opacity: 0.6;
}
.post-module .thumbnail {
  background: #000000;
  height: 400px;
  overflow: hidden;
}
.post-module .thumbnail .date {
  position: absolute;
  top: 20px;
  right: 20px;
  z-index: 1;
  background: #39D398;
  width: 55px;
  height: 55px;
  padding: 8px 0;
  -webkit-border-radius: 100%;
  -moz-border-radius: 100%;
  border-radius: 100%;
  color: #FFFFFF;
  font-weight: 700;
  text-align: center;
  -webkti-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
.post-module .thumbnail .date .day {
  font-size: 16px;
}
.post-module .thumbnail .date .month {
  font-size: 10px;
  text-transform: uppercase;
}
.post-module .thumbnail img {
  display: block;
  width: 120%;
  -webkit-transition: all 0.3s linear 0s;
  -moz-transition: all 0.3s linear 0s;
  -ms-transition: all 0.3s linear 0s;
  -o-transition: all 0.3s linear 0s;
  transition: all 0.3s linear 0s;
}
.post-module .post-content {
  position: absolute;
  bottom: 0;
  background: #FFFFFF;
  width: 100%;
  padding: 30px;
  -webkti-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
  -moz-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
  -ms-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
  -o-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
  transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
}
.post-module .post-content .category {
  position: absolute;
  top: -34px;
  left: 0;
  background: #39D398;
  padding: 10px 15px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 600;
  text-transform: uppercase;
}
.post-module .post-content .title {
  margin: 0;
  padding: 0 0 10px;
  color: #333333;
  font-size: 20px;
  font-weight: 700;
}
.post-module .post-content .sub_title {
  margin: 0;
  padding: 0 0 20px;
  color: #39D398;
  font-size: 18px;
  font-weight: 400;
}
.post-module .post-content .description {
  display: none;
  color: #666666;
  font-size: 14px;
  line-height: 1.8em;
}
.post-module .post-content .post-date {
  margin: 30px 0 0;
  color: #999999;
}
.post-module .post-content .post-date .timestamp {
  margin: 0 16px 0 0;
}
.post-module .post-content .post-date a {
  color: #999999;
  text-decoration: none;
}
.post-module .post-content .post-date a:hover{
  color: #000;
}
.hover .post-content .description {
  display: block !important;
  height: auto !important;
  opacity: 1 !important;
}
/*
.container {
  max-width: 800px;
  min-width: 640px;
  margin: 0 auto;
}
*/
.container:before,
.container:after {
  content: '';
  display: block;
  clear: both;
}
.container .column {
  width: 50%;
  padding: 0 25px;
  -webkti-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  float: left;
}
.container .column .demo-title {
  margin: 0 0 15px;
  color: #666666;
  font-size: 18px;
  font-weight: bold;
  text-transform: uppercase;
}
.container .info {
  width: 300px;
  margin: 50px auto;
  text-align: center;
}
.container .info h1 {
  margin: 0 0 15px;
  padding: 0;
  font-size: 24px;
  font-weight: bold;
  color: #333333;
}
.container .info span {
  color: #666666;
  font-size: 12px;
}
.container .info span a {
  color: #000000;
  text-decoration: none;
}
.container .info span .fa {
  color: #e74c3c;
}
.cover-image .post-module, .cover-image .thumbnail {
    height: auto !important;
}
.cover-image img {
    width: 100% !important;
}
.news-content {
    word-wrap: break-word;
}


@media screen and (max-width: 992px) {

    .home {
        min-height: 100vh;
        width: 100vw !important;
    }

    .logo-view {
        display: block;
    }

    .scroll {
        display: none;
    }

    .mis-a-vis {
        padding-left: 1.75rem !important;
    }



    ;
}

}

